# file-ingest

./: .gitignore  CLI_USAGE.md  Cargo.toml  PDF_TO_IMAGE.md  QUICK_START.md  README.md
analysis/: pdf_to_md_review.md
examples/: ast_dump.rs  docx_to_pdf.rs  file_to_images_workflow.rs  file_to_pdf_workflow.rs  normalize_md.rs  pdf_cli.rs
file-ingest-ios/: Cargo.toml
file-ingest-ios/src/: lib.rs
src/: detector.rs  error.rs  lib.rs  main.rs  md_normalizer.rs  options.rs  pipeline.rs
src/core/: asset.rs  block.rs  document.rs  mod.rs  source.rs  table.rs
src/core/content/: chart.rs  empty.rs  group.rs  image.rs  mod.rs  table.rs  text.rs
src/model/: ast.rs
src/ocr/: mod.rs
src/parser/: csv.rs  docx.rs  excel.rs  image.rs  mod.rs  pdf.rs  text.rs
src/pdf_export/: converter.rs  mod.rs  options.rs  pdf_to_image.rs
src/renderer/: markdown.rs  mod.rs
src/utils/: file.rs  mod.rs
src/view/: mod.rs
src/vision/: mod.rs
tests/: core_ingest.rs  test_csv.rs  test_document_pipeline.rs  test_docx.rs  test_pdf_export.rs  test_text.rs
tests/common/: mod.rs
