[package]
name = "file-ingest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
base64 = "0.22"
calamine = "0.31"
csv = "1.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
infer = "0.19"
mime_guess = "2.0"
pdf-extract = "0.10"
pdfium-render = { version = "0.8", optional = true }
printpdf = "0.7"
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
zip = { version = "6", default-features = false, features = ["deflate"] }
hex = "0.4"

[features]
pdf-to-image = ["pdfium-render"]

[dev-dependencies]
tempfile = "3.10"
clap = { version = "4.5", features = ["derive"] }
