[package]
name = "file-ingest"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
calamine = "0.35"
csv = "1.3"
infer = "0.19"
quick-xml = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
zip = { version = "8", default-features = false, features = ["deflate"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
