[package]
name = "file-ingest"
version = "0.1.1"
edition = "2024"
description = "Parse file bytes into a canonical document structure for AI and downstream processing."
license = "MIT"
repository = "https://github.com/atlas-orien/file-ingest"
readme = "README.md"
keywords = ["document", "parser", "ingest", "ai"]
categories = ["parser-implementations", "text-processing"]

# [lib]
# crate-type = ["rlib"]

[dependencies]
calamine = "0.35"
csv = "1.3"
infer = "0.19"
pdf-extract = "0.10"
quick-xml = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
zip = { version = "8", default-features = false, features = ["deflate"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
